--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Algorithms for producing avatar images which uniquely (and memorably) map to pubkeys",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "wzrd test.js"
   },
   "repository": {
     "type": "git",
